2007-07-26  Hiroyuki Ikezoe  <poincare@ikezoe.net>

	* attachment-reminder.c: Plugged memory leak and the second argument
	of g_utf8_strdown() should be in bytes.

2007-07-17  Sankar P  <psankar@novell.com>

	* org-gnome-attachment-reminder.errors.xml:
	Changed the string "Cancel" to "Continue Editing"

2007-07-10  Sankar P  <psankar@novell.com>

	* org-gnome-attachment-reminder.errors.xml:
	Fixed Marking for Translation bugs

2007-07-09  Srinivasa Ragavan  <sragavan@novell.com>

	* Makefile.am: Fix for build break from Johnny.

2007-07-09  Johnny Jacob <jjohnny@novell.com>

	* attachment-remidner.glade : Added mnemonics.
	* attachment-reminder.c : Fixed warnings.
	* org-gnome-attachment-reminder.errors.xml : Added new strings.
	
2007-07-09  Johnny Jacob <jjohnny@novell.com>

	** Added attachment Reminder plugins
	* apps-evolution-attachment-reminder.schemas.in.in:
	* org-gnome-evolution-attachment-reminder.eplug.xml:
	* attachment-reminder.c:                             
	* Makefile.am:
	* attachment-reminder.glade:                         
	* org-gnome-attachment-reminder.errors.xml: